--- a/my-portfolio/src/app/app.component.html
+++ b/my-portfolio/src/app/app.component.html
@@ -1,188 +1,7 @@
-<!-- Navigation -->
-<nav class="navbar">
-  <div class="container">
-    <h1 class="navbar-heading text-light">Welcome</h1>
-    <div class="social-icons">
-      <a href="https://github.com/KashifSidd" target="_blank">
-        <img src="../assets/images/github.svg" alt="">
-      </a>  
-      <a href="https://www.linkedin.com/in/kashif-siddiqui-778967211/" target="_blank">
-        <img src="../assets/images/linkedln.svg" alt="">
-      </a>
-      <a href="https://www.instagram.com/hopefully_if/" target="_blank">
-        <img src="../assets/images/instagram.svg" alt="">
-      </a>
-    </div>
-  </div>
-  <div class="ball"></div>
-</nav>
-
-
-
-
-
-<!-- Header -->
-<header class="bg-light py-5">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <div class="card box-effect">
-          <div class="card-body">
-            <h1>Hi, I'm Kashif Siddiqui</h1>
-            <div class="box-effect-content">
-              <p class="lead">As a frontend developer with 3 years of experience, I specialize in HTML, CSS, Bootstrap, Angular, and TypeScript. I also have expertise in no-code platforms like Wix, Shopify, and Webflow. I am passionate about creating visually appealing and user-friendly websites and am dedicated to delivering high-quality services to my clients..</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-      <div class="col-md-6 d-flex justify-content-center justify-content-md-end">
-        <div class="profile-img-wrapper">
-          <div class="robot" (mouseenter)="stopRobotAnimation()"></div>
-        </div>
-      </div>
-      
-    </div>
-  </div>
-</header>
-
-
-
-
-
-
-
-<!-- Main Content -->
-<main class="py-5">
-  <div class="container">
-    <h2>My Services</h2>
-    <div class="row mt-4">
-      <div class="col-md-4">
-        <div class="card h-100 box-effect">
-          <div class="card-body">
-            <h5 class="card-title">Web Design</h5>
-            <p class="card-text">I specialize in creating modern, eye-catching designs that are tailored to your brand and target audience.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card h-100 box-effect">
-          <div class="card-body">
-            <h5 class="card-title">Web Development</h5>
-            <p class="card-text">I have experience building websites and web applications using a variety of technologies including HTML, CSS, JavaScript, and more.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card h-100 box-effect">
-          <div class="card-body">
-            <h5 class="card-title">Responsive Design</h5>
-            <p class="card-text">I ensure that all of my websites are fully responsive and optimized for all devices, including desktops, tablets, and smartphones.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
-
-<!--My Work section-->
-<section id="my-work" class="py-5">
-  <div class="container">
-    <h2 class="text-center mb-4">My Work</h2>
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <div class="card h-100">
-          <img src="https://via.placeholder.com/350x150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Project 1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card h-100">
-          <img src="https://via.placeholder.com/350x150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Project 2</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card h-100">
-          <img src="https://via.placeholder.com/350x150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Project 3</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-
-<!--Skills section-->
-<section id="skills" class="bg-light py-5">
-  <div class="container">
-    <h2 class="text-center mb-5">My Skills</h2>
-    <div class="row">
-      <div class="col-sm-6 col-md">
-        <div class="skill">
-          <div class="skill-value">90%</div>
-          <div class="skill-name">HTML</div>
-          <div class="skill-bar skill-html"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md">
-        <div class="skill">
-          <div class="skill-value">80%</div>
-          <div class="skill-name">CSS</div>
-          <div class="skill-bar skill-css"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md">
-        <div class="skill">
-          <div class="skill-value">70%</div>
-          <div class="skill-name">Typescript</div>
-          <div class="skill-bar skill-js"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md">
-        <div class="skill">
-          <div class="skill-value">80%</div>
-          <div class="skill-name">Figma</div>
-          <div class="skill-bar skill-js"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md">
-        <div class="skill">
-          <div class="skill-value">90%</div>
-          <div class="skill-name">no code</div>
-          <div class="skill-bar skill-js"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--Footer-->  
-<footer class="bg-dark py-3">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col text-center">
-        
-        <div class="d-flex justify-content-center align-items-center">
-          <p class="text-white mb-0">© 2023 All rights reserved.</p>
-          <div class="line"></div>
-          <div class="circle"></div>
-          <div class="line"></div><p class="text-white mb-0">Kashif Siddiqui</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
+<app-header></app-header>
+<app-my-section></app-my-section>
+<app-my-service></app-my-service>
+<app-my-work></app-my-work>
+<app-my-skills></app-my-skills>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
