--- a/my-portfolio/src/app/app.component.html
+++ b/my-portfolio/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-ball-cursor></app-ball-cursor>
 <app-header></app-header>
 <app-my-section></app-my-section>
 <app-my-service></app-my-service>
