--- a/my-portfolio/src/app/home/my-service/my-service.component.html
+++ b/my-portfolio/src/app/home/my-service/my-service.component.html
@@ -1,31 +1,31 @@
 <!-- Main Content -->
 <main class="py-5">
   <div class="container">
-    <h2>My Services</h2>
+    <h1 class="text-center mb-4"><strong>My Services</strong></h1>
     <div class="row mt-4">
-      <div class="col-md-4">
+      <div class="col-md-4 mt-2">
         <div class="card h-100 box-effect">
           <img src="../../../assets/images/web-design.gif" alt="Web Design" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Web Design</h5>
+            <h3 class="card-title">Web Design</h3>
             <p class="card-text">I specialize in creating modern, eye-catching designs that are tailored to your brand and target audience.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-2">
         <div class="card h-100 box-effect">
           <img src="../../../assets/images/web-development.gif" alt="Web Development" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Web Development</h5>
+            <h3 class="card-title">Web Development</h3>
             <p class="card-text">I have experience building websites and web applications using a variety of technologies including HTML, CSS, JavaScript, and more.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-2">
         <div class="card h-100 box-effect">
           <img src="../../../assets/images/responsive-web.gif" alt="Responsive Design" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Responsive Design</h5>
+            <h3 class="card-title">Responsive Design</h3>
             <p class="card-text">I ensure that all of my websites are fully responsive and optimized for all devices, including desktops, tablets, and smartphones.</p>
           </div>
         </div>
