--- a/my-portfolio/src/app/home/my-skills/my-skills.component.html
+++ b/my-portfolio/src/app/home/my-skills/my-skills.component.html
@@ -1,43 +1,59 @@
-<!--Skills section-->
-<section id="skills" class="bg-light py-5">
-    <div class="container">
-      <h2 class="text-center mb-5">My Skills</h2>
-      <div class="row">
-        <div class="col-sm-6 col-md">
-          <div class="skill">
-            <div class="skill-value">90%</div>
-            <div class="skill-name">HTML</div>
-            <div class="skill-bar skill-html"></div>
+<section id="skills" class="py-5">
+  <div class="container">
+    <h1 class="text-center mb-4"><strong>Skills</strong></h1>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="progress-wrapper">
+          <h4>HTML5</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 90%;"></div>
           </div>
         </div>
-        <div class="col-sm-6 col-md">
-          <div class="skill">
-            <div class="skill-value">80%</div>
-            <div class="skill-name">CSS</div>
-            <div class="skill-bar skill-css"></div>
+        <div class="progress-wrapper">
+          <h4>CSS3</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 85%;"></div>
           </div>
         </div>
-        <div class="col-sm-6 col-md">
-          <div class="skill">
-            <div class="skill-value">70%</div>
-            <div class="skill-name">Typescript</div>
-            <div class="skill-bar skill-js"></div>
+        <div class="progress-wrapper">
+          <h4>Bootstrap</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 80%;"></div>
           </div>
         </div>
-        <div class="col-sm-6 col-md">
-          <div class="skill">
-            <div class="skill-value">80%</div>
-            <div class="skill-name">Figma</div>
-            <div class="skill-bar skill-js"></div>
+        <div class="progress-wrapper">
+          <h4>Angular</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 75%;"></div>
           </div>
         </div>
-        <div class="col-sm-6 col-md">
-          <div class="skill">
-            <div class="skill-value">90%</div>
-            <div class="skill-name">no code</div>
-            <div class="skill-bar skill-js"></div>
+      </div>
+      <div class="col-md-6 mb-4">
+        <div class="progress-wrapper">
+          <h4>Typescript</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 70%;"></div>
+          </div>
+        </div>
+        <div class="progress-wrapper">
+          <h4>Figma</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 80%;"></div>
+          </div>
+        </div>
+        <div class="progress-wrapper">
+          <h4>No code platform</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 90%;"></div>
+          </div>
+        </div>
+        <div class="progress-wrapper">
+          <h4>Git</h4>
+          <div class="progress">
+            <div class="progress-bar" style="width: 75%;"></div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
