--- a/my-portfolio/src/app/home/my-work/my-work.component.html
+++ b/my-portfolio/src/app/home/my-work/my-work.component.html
@@ -1,35 +1,37 @@
-<!--My Work section-->
 <section id="my-work" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">My Work</h2>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="../assets/work-images/tblc.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">The Bombay Lettering Company</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
-            </div>
+  <div class="container">
+    <h1 class="text-center mb-4"><strong>My Work</strong></h1>
+    <div class="row">
+      <div class="col-md-4 mb-4 mt-2">
+        <div class="card h-100">
+          <div class="card-img-top" style="background-image: url('../assets/work-images/tblc.png'); height: 200px; background-size: cover; background-position: center;"></div>
+          <div class="card-body">
+            <h3 class="card-title mb-3">The Bombay Lettering Company</h3>
+            <p class="card-text mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
+            <a href="https://www.bombaylettering.com/" target="_blank" class="btn btn-primary">View Project</a>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/350x150" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Project 2</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
-            </div>
+      </div>
+      <div class="col-md-4 mb-4 mt-2">
+        <div class="card h-100">
+          <div class="card-img-top" style="background-image: url('../assets/work-images/flutter-chat-app.png'); height: 200px; background-size: cover; background-position: center;"></div>
+          <div class="card-body">
+            <h3 class="card-title mb-3">Telegram Clone App(My Chat)</h3>
+            <p class="card-text mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="https://via.placeholder.com/350x150" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Project 3</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
-            </div>
+      </div>
+      <div class="col-md-4 mb-4 mt-2">
+        <div class="card h-100">
+          <div class="card-img-top" style="background-image: url('../assets/work-images/restaurant-app.png'); height: 200px; background-size: cover; background-position: center;"></div>
+          <div class="card-body">
+            <h3 class="card-title mb-3">Restaurant App</h3>
+            <p class="card-text mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, elit eu interdum congue, augue lorem efficitur magna, sit amet rutrum felis magna eu augue.</p>
+            <a href="https://restaurant-app-6a129.web.app/login" target="_blank" class="btn btn-primary">View Project</a>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
