--- a/my-portfolio/src/app/home/my-section/my-section.component.html
+++ b/my-portfolio/src/app/home/my-section/my-section.component.html
@@ -1,25 +1,37 @@
-<!-- Header -->
 <header class="bg-light py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <div class="card box-effect">
-            <div class="card-body">
-              <h1>Hi, I'm Kashif Siddiqui</h1>
-              <div class="box-effect-content">
-                <p class="lead">As a frontend developer with 3 years of experience, I specialize in HTML, CSS, Bootstrap, Angular, and TypeScript. I also have expertise in no-code platforms like Wix, Shopify, and Webflow. I am passionate about creating visually appealing and user-friendly websites and am dedicated to delivering high-quality services to my clients..</p>
-              </div>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <div class="card box-effect">
+          <div class="card-body">
+            <h1>Hi, I'm Kashif Siddiqui</h1>
+            <div class="box-effect-content">
+              <p class="lead">As a frontend developer with 3 years of experience, I specialize in HTML, CSS, Bootstrap,
+                Angular, and TypeScript. I also have expertise in no-code platforms like Wix, Shopify, and Webflow. I am
+                passionate about creating visually appealing and user-friendly websites and am dedicated to delivering
+                high-quality services to my clients.</p>
             </div>
           </div>
         </div>
-        
-        <div class="col-md-6 d-flex justify-content-center justify-content-md-end">
-          <div class="profile-img-wrapper">
-            <div class="robot" (mouseenter)="stopRobotAnimation()"></div>
+      </div>
+      <div class="col-md-6 d-flex justify-content-center justify-content-md-end">
+        <div id="header-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-animation="none">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../.././../assets/images/web_development_2.gif" class="d-block w-100" alt="Slide 1">
+            </div>
+            <div class="carousel-item">
+              <img src="../.././../assets/images/we-dev.gif" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+              <img src="../.././../assets/images/seo-search-enginge-optimization.gif" class="d-block w-100" alt="Slide 3">
+            </div>
           </div>
         </div>
-        
       </div>
+      
+
     </div>
-  </header>
-  
+
+  </div>
+</header>
