--- a/my-portfolio/src/app/home/my-section/my-section.component.scss
+++ b/my-portfolio/src/app/home/my-section/my-section.component.scss
@@ -29,65 +29,8 @@
     line-height: 1.5;
   }
 
-  .profile-img-wrapper {
-    position: relative;
-    width: 300px;
-    height: 300px;
-  }
-
-  .robot {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-image: url('../../../assets/images/robot.png');
-    background-size: cover;
-    animation: none;
-    cursor: pointer;
-  }
-  
-  @media (min-width: 768px) {
-    .robot {
-      animation: moveRobot 8s ease-in-out infinite;
-    }
-  
-    @keyframes moveRobot {
-      0% {
-        transform: translate(-50%, -50%) rotate(0deg);
-      }
-      25% {
-        transform: translate(-50%, -50%) rotate(90deg);
-      }
-      50% {
-        transform: translate(-50%, -50%) rotate(180deg);
-      }
-      75% {
-        transform: translate(-50%, -50%) rotate(270deg);
-      }
-      100% {
-        transform: translate(-50%, -50%) rotate(360deg);
-      }
-    }
-  }
-  
-  @media (max-width: 767px) {
-    header {
-      height: auto;
-    }
-  
-    .profile-img-wrapper {
-      width: 100%;
-      height: auto;
-    }
-  
-    .robot {
-      animation: none;
-    }
-  }
-  
-  .robot.stop {
-    animation-play-state: paused;
+  #header-carousel .carousel-item img {
+    height: 300px; /* set a fixed height for the carousel container */
+    object-fit: cover; /* adjust the images to fit the container */
   }
   
