--- a/my-portfolio/src/app/app.component.html
+++ b/my-portfolio/src/app/app.component.html
@@ -3,6 +3,26 @@
 <app-my-section></app-my-section>
 <app-my-service></app-my-service>
 <app-my-work></app-my-work>
+<app-education></app-education>
 <app-my-skills></app-my-skills>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
+
+
+ <!-- <div class="row">
+    <div class="col-6">
+        <h1>Shakespeare plan | Per month</h1>
+        <h4 class="d-flex justify-content-space-between dollar">$250/m</h4>
+        <div class="d-flex justify-content-center flex-wrap gap-4 mt-5">
+       <span><i class="fa-solid fa-check"></i><span>Influencer matching</span></span>  
+       <span><i class="fa-solid fa-check"></i><span>Influencer matching</span></span>
+       <span><i class="fa-solid fa-check"></i><span>Influencer matching</span></span>
+       <span><i class="fa-solid fa-check"></i><span>Influencer matching</span></span>
+       <span><i class="fa-solid fa-check"></i><span>Influencer matching</span></span>
+       <span><i class="fa-solid fa-check"></i><span>Influencer matching</span></span>
+    </div>
+    </div>
+    <div class=" next col-6 mb-5 d-flex justify-content-center">
+        <h3 class=""> Next payment:$29 on Jul 20, 2022</h3>
+    </div>
+</div> -->
