--- a/my-portfolio/src/app/home/my-work/my-work.component.html
+++ b/my-portfolio/src/app/home/my-work/my-work.component.html
@@ -1,6 +1,6 @@
 <section id="my-work" class="py-5">
   <div class="container">
-    <h1 class="text-center mb-4"><strong>My Work</strong></h1>
+    <h1 class="title">My Work</h1>
     <div class="row">
       <div class="col-md-4 mb-4 mt-2">
         <div class="card h-100">
