--- a/my-portfolio/src/styles.scss
+++ b/my-portfolio/src/styles.scss
@@ -3,5 +3,11 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
     cursor: none;
+    .title {
+        text-align: center;
+        font-size: 2.5rem;
+        margin-bottom: 3rem;
+      }
 
 }
+
