--- a/my-portfolio/src/app/home/education/education.component.html
+++ b/my-portfolio/src/app/home/education/education.component.html
@@ -1,14 +1,14 @@
 <section id="education">
   <div class="container">
-    <h2 class="section-title">Education</h2>
+    <h2 class="title">Education</h2>
     <div class="row">
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">Bachelor's Degree</h3>
-            <p class="card-subtitle">Computer Science</p>
-            <p class="card-text">XYZ University</p>
-            <p class="card-text"><small class="text-muted">2015 - 2019</small></p>
+            <p class="card-subtitle">Information Technology</p>
+            <p class="card-text">Kishinchand Chellaram College</p>
+            <p class="card-text"><small class="text-muted">2017 - 2020</small></p>
           </div>
         </div>
       </div>
@@ -16,19 +16,9 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">Master's Degree</h3>
-            <p class="card-subtitle">Data Science</p>
-            <p class="card-text">ABC University</p>
-            <p class="card-text"><small class="text-muted">2019 - 2021</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card">
-          <div class="card-body">
-            <h3 class="card-title">Online Course</h3>
-            <p class="card-subtitle">Web Development</p>
-            <p class="card-text">Coursera</p>
-            <p class="card-text"><small class="text-muted">2022 - Present</small></p>
+            <p class="card-subtitle">Information Technology</p>
+            <p class="card-text">Ramnarain Ruia Autonomous College</p>
+            <p class="card-text"><small class="text-muted">2020 - 2022</small></p>
           </div>
         </div>
       </div>
