--- a/my-portfolio/src/app/home/header/header.component.html
+++ b/my-portfolio/src/app/home/header/header.component.html
@@ -1,7 +1,10 @@
 <!-- Navigation -->
 <nav class="navbar">
     <div class="container">
-      <h1 class="navbar-heading text-light">Welcome</h1>
+      <h1 class="navbar-heading text-light">
+        <span>W</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span>
+      </h1>
+      
       <div class="social-icons">
         <a href="https://github.com/KashifSidd" target="_blank">
           <img src="../assets/images/github.svg" alt="">
