--- a/my-portfolio/src/app/home/my-skills/my-skills.component.html
+++ b/my-portfolio/src/app/home/my-skills/my-skills.component.html
@@ -1,6 +1,6 @@
 <section id="skills" class="py-5">
   <div class="container">
-    <h1 class="text-center mb-4"><strong>Skills</strong></h1>
+    <h1 class="title">Prowess</h1>
     <div class="row">
       <div class="col-md-6 mb-4">
         <div class="progress-wrapper">
