--- a/my-portfolio/src/app/home/my-service/my-service.component.html
+++ b/my-portfolio/src/app/home/my-service/my-service.component.html
@@ -1,7 +1,7 @@
 <!-- Main Content -->
 <main class="py-5">
   <div class="container">
-    <h1 class="title">My Services</h1>
+    <h1 class="title">Expertise</h1>
     <div class="row mt-4">
       <div class="col-md-4 mt-2">
         <div class="card h-100 box-effect">
